--- a/astro_2.0/features/CreateProposal/components/CreateProposalCard/CreateProposalCard.module.scss
+++ b/astro_2.0/features/CreateProposal/components/CreateProposalCard/CreateProposalCard.module.scss
@@ -145,6 +145,10 @@
 
 .textArea.textArea {
   margin-top: 2px;
+
+  &::-webkit-scrollbar {
+    display: none !important;
+  }
 }
 
 .dropdown {
