--- a/components/inputs/select/dropdown-select.module.scss
+++ b/components/inputs/select/dropdown-select.module.scss
@@ -115,7 +115,7 @@
   padding-inline-start: 0;
   position: absolute;
   top: 80%;
-  z-index: 1;
+  z-index: 100;
 }
 
 .item {
